Published slides, videos for EGR 322, 363 for today 	modified:   F20/322/322F20DN.HTM 	modified:   F20/363/363F20DN.HTM

--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -185,13 +185,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/188250125/download?download_frd=1"><!-- -->
-	  10/27<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      10/29<!-- --</a><!-- --></td>
+	  10/27<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/188503051/download?download_frd=1"><!-- -->
+      10/29<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=_OFVO85bTTw">VIDEO</a></small>
 	  <!-- --> Common emmitter charactersitic, BJT Early effect, Examples<!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
+      <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=JMRwCLaICjY">VIDEO</a></small>
+	  <!-- --> BJT 2nd effects: Bkdwn of CBJ, EBJ, temp dep of &beta;; <b>Ch. 7</b> Intro Amps. <!--end comment--></td>  
    </TR><!-- Week of 11/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
