--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -184,14 +184,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/188176151/download?download_frd=1"><!-- -->
-	  10/27<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      10/29<!-- --</a><!-- --></td>
+	  10/27<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/188501056/download?download_frd=1"><!-- -->
+      10/29<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=BUDbqn96_pY">VIDEO</a></small>
 	  <!-- --> FDM, Tuning: TRF, Regenerative, Superheterodyne<!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small>
-	  <!-- --> <!--end comment--></td>  
+      <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=wlFRgUV09Ts">VIDEO</a></small>
+	  <!-- --> Superhet details: image freq., spurrious freqs., double conversion<!--end comment--></td>  
    </TR><!-- Week of 11/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
