Published slides and video for today for EGR 363

--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -177,7 +177,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       10/22<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=kGoLMuED57g"
-	  >VIDEO</a></small><!-- --> Application of QAM: Analog color video.  Colory theory.<!--end comment--><br>
+	  >VIDEO</a></small><!-- --> Application of QAM: Analog color video.  Color theory.<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=eLjY5fYtrqo"
 	  >VIDEO</a></small><!-- --> Applications of QAM: AM Stereo, Wi-Fi, Other AM systems, Intro FDM<!--end comment--></td>  
    </TR><!-- Week of 10/25 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
@@ -191,17 +191,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=BUDbqn96_pY">VIDEO</a></small>
 	  <!-- --> FDM, Tuning: TRF, Regenerative, Superheterodyne<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=wlFRgUV09Ts">VIDEO</a></small>
-	  <!-- --> Superhet details: image freq., spurrious freqs., double conversion<!--end comment--></td>  
+	  <!-- --> Superhet details: image freq., spurious freqs., double conversion<!--end comment--></td>  
    </TR><!-- Week of 11/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/03<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/188952005/download?download_frd=1"><!-- -->
+	  11/03<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/05<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small>
-	  <!-- --> <!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=rIZljMow1Uw">VIDEO</a></small>
+	  <!-- --> Prob. 3.24, FDM & wiring, switching, business challenges and joys<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><font color=grey>Test #2</font><!--end comment--></td>  
    </TR><!-- Week of 11/08 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
