--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -195,13 +195,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- --> BJT 2nd effects: Bkdwn of CBJ, EBJ, temp dep of &beta;; <b>Ch. 7</b> Intro Amps. <!--end comment--></td>  
    </TR><!-- Week of 11/01 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/03<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/188954989/download?download_frd=1"><!-- -->
+	  11/03<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/05<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=tszSTUsx9mo">VIDEO</a></small>
+	  <!-- --> Example sm-sig analysis, pi-tee, macro-model of amp, 3 amp configs<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
    </TR><!-- Week of 11/08 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
