--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/03/2020 9:30 pm)
+                               >(Last update: 11/03/2020 9:34 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -91,8 +91,8 @@ PS                                                       </small>
         11/03<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        11/10<br>
-        
+        <a href="https://dordt.instructure.com/courses/2899998/assignments/29918024"
+		>11/10</a><br>        
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
 		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
