Posted solutions to 363F20PS9, 10 	modified:   F20/363/363F20PS.HTM

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/03/2020 9:34 pm)
+                               >(Last update: 11/04/2020 8:44 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -118,9 +118,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/29892580"
 		>11/03</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!--<a href=
-		"https://dordt.instructure.com/files/158346539/download?download_frd=1"
-		>11/13</a><br>-->        
+        <a href=
+		"https://dordt.instructure.com/files/189084820/download?download_frd=1"
+		>11/04</a><br>      
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 		         Superheterodyne tuning                <br>&nbsp;
@@ -141,9 +141,9 @@ PS                                                       </small>
         <a href="https://dordt.instructure.com/courses/2899998/assignments/29790062"
 		>10/27</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        10/28<!--<a href=
-		"https://dordt.instructure.com/files/158346539/download?download_frd=1"
-		>10/28</a><br>-->        
+        <a href=
+		"https://dordt.instructure.com/files/189084713/download?download_frd=1"
+		>10/28</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp;
         Read Ch 2, Sec. 2.3  Ch 3 Sec. 3.2.3 thru 3.3  <br>&nbsp;
