Published slides and video for today for EGR 323

--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -197,13 +197,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/188954989/download?download_frd=1"><!-- -->
-	  11/03<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      11/05<!-- --</a><!-- --></td>
+	  11/03<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/189199766/download?download_frd=1"><!-- -->
+      11/05<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=tszSTUsx9mo">VIDEO</a></small>
 	  <!-- --> Example sm-sig analysis, pi-tee, macro-model of amp, 3 amp configs<!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
+      <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=ot_1t-svJig">VIDEO</a></small>
+	  <!-- --> Details of Common Source, Emitter, Gate, Base amplifiers<!--end comment--></td>  
    </TR><!-- Week of 11/08 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
