Fixed broken link to problem 3-A, 363PS#10 	modified:   F20/363/363F20PS.HTM

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/04/2020 8:44 pm)
+                               >(Last update: 11/06/2020 7:49 am)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -105,7 +105,7 @@ PS                                                       </small>
 		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 		         Ch 2 Sec. 2.6, slides<br>&nbsp;
 		                                               <br>&nbsp;
-        Do<DO> <a href="https://dordt.instructure.com/files/158486076/download?download_frd=1"
+        Do<DO> <a href="https://dordt.instructure.com/files/188959972/download?download_frd=1"
 		>3-A</a> (click link)</DO>           
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
