Linked up remote access to PSpice for EGR 322 	modified:   F20/322/PSPICE.htm 	new file:   F20/322/PSpice_remote_server_logo.png

--- a/F20/322/PSPICE.htm
+++ b/F20/322/PSPICE.htm
@@ -31,16 +31,52 @@ TABLE {
                      HREF="../../redirect/Dordt_Engineering.htm">
 
     Dordt College Engineering & Department</A>               <BR>
-                                                             <BR>
-          INSTRUCTIONS FOR DOWNLOADING                       <BR>
-	  FOR USE WITH VARIOUS ENGINEERING COURSES               <BR>
-                  (Fall 2020)                            </B></P>
-                                               </td></tr></table>
                     <table align="center" width="420" border="0">
                                                              <tr>
+                 <td align="center" valign="bottom" width=420><b>
+                                                             <BR>
+      INSTRUCTIONS FOR REMOTE ACCESS TO PSpice               <BR></b>
+	  (No installation required--runs via your Web browser)<br><b>
+                  (Fall 2020)                            </B></P>
+<A HREF=
+"https://remoteapp.dordt.edu//RDWeb/Pages/rdp/cpub-pspice-DU_Remote_Apps-CmsRdsh.rdp"
+target="blank_">
+<img width="142" height="168"
+alt="'click'--> to publisher's page" hspace="0" 
+src="PSpice_remote_server_logo.png" 
+border="0"></A>
+<br><br><br></td></tr>
+                           <tr><td align="left" width="420"><p>
+<b>Click the icon-button above to access PSpice AD Lite on a 
+remote server.</b>  Typically you must log into the remote server
+and give Windows permission to make the connection, so you will be
+asked for logon credentials more then once.  </p><p>
 
-<td align="center" valign="bottom" width=420>
+PSpice AD Lite will be running on a remote computer but will 
+appear in a window on your computer as if it is running on 
+your computer.  Normally the file tree for this program will be
+focused on the remote computer's file system.  Within the remote-loaded 
+PSpice program the "C:\" drive is not your local drive, it is the
+drive on which the remote server is running.  Look instead for 
+a drive labeled <br>
+"C on &lt;your computer's name&gt;" or something 
+similar.  Other drives attached via a network to your local 
+machine will usually also appear in the file tree as 
+"G on. . ." or similar. </p><p>
 
+If you get a dialog box about a license file that is missing, 
+tick the box about not asking again and then click on "YES."
+The program will then run without a license.  (Running without 
+a license places limitations on the number of nodes, etc.  You 
+will not hit these limits in assigned course work, or if 
+you do, you have made a mistake.)  </p><br><br><br>
+<hr>
+</td></tr>                                                   <tr>
+                 <td align="center" valign="bottom" width=420><b>
+                                                             <BR>
+          INSTRUCTIONS FOR DOWNLOADING PSpice                <BR></b>
+  (Will take several GB on your personal computer's drive.)          <br><b>
+                  (Fall 2020)                            </B></P>
 <A HREF=
 "https://www.orcad.com/orcad-academic-program"
 target="blank_">
@@ -71,7 +107,7 @@ above).  There you can read more about the program.  You will have
 to set up an account.  PSpice is a part of a larger software package 
 called OrCAD.  Initially, follow directions to download either Orcad 
 or Pspice.  Either choice will lead to the same options.  You will 
-recieve an e-mail with directions for performing the download.<br><br>
+receive an e-mail with directions for performing the download.<br><br>
 
 <b>OrCAD PSpice A/D: </b>  (Recommended) If you only want to use the 
 software to do homework for this class, you  only need to install 
