Posted 322PS#10, solutions to 322PS#8 	modified:   F20/322/322F20PS.HTM

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 10/29/2020 10:06 pm)
+                              >(Last update: 11/06/2020 8:16 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,32 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+11
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/06
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        11/19
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/138385182/download?download_frd=1"
+        >11/28</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topic: Basics of amplification, small sig models<br>&nbsp;
+		Read: 7.1, 7.2                                 <br>&nbsp;
+		                                               <br>&nbsp;
+		Do<DO> 7.5, +7.6, +7.25, +*7.33, 7.42, +7.53, *7.58</DO><br>&nbsp;
+		                                               <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P372"
+		>errata on Equation 7.13</a>                   <br>&nbsp;
+		Note <a href=
+		"../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P475"
+		>errata on Problem 7.5 part (c)</a>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
 10
@@ -127,7 +153,7 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/2899971/assignments/29815330"
 		>10/29</a>
         <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
+		11/02<!--<a href=
         "https://dordt.instructure.com/files/137303597/download?download_frd=1"
         >11/05</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
@@ -154,9 +180,9 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/2899971/assignments/29742280"
 		>10/22</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		10/26 <!--<a href=
-        "https://dordt.instructure.com/files/137196859/download?download_frd=1"
-        >10/29</a><br>-->
+		<a href=
+        "https://dordt.instructure.com/files/189303330/download?download_frd=1"
+        >10/26</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: P-ch, CMOS, finite <i>r<sub>D</sub></i> in saturation <br>&nbsp;
 		MOSFET at DC (Bias analysis), 2nd-order effects.<br>&nbsp;
