Posted turn-in link for 322PS11 	modified:   F20/322/322F20PS.HTM

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/06/2020 8:16 pm)
+                              >(Last update: 11/06/2020 8:23 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -90,11 +90,12 @@ PS                                                           <BR>
         11/06
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        11/19
-        
+        <a href=
+		"https://dordt.instructure.com/courses/2899971/assignments/29945733"
+		>11/19</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/138385182/download?download_frd=1"
+        "https://dordt.instructure.com/courses/2899971/assignments/29945733"
         >11/28</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topic: Basics of amplification, small sig models<br>&nbsp;
