Published slides and video for today for EGR 322, also published solutions to PS#9, PS10 	modified:   F20/322/322F20DN.HTM 	modified:   F20/322/322F20PS.HTM

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/06/2020 8:23 pm)
+                              >(Last update: 11/10/2020 7:51 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -121,8 +121,8 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/2899971/assignments/29884275"
 		>11/05</a>
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/137759873/download?download_frd=1"
+		<a href=
+        "https://dordt.instructure.com/files/189653025/download?download_frd=1"
         >11/12</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topic: BJT DC circuits, secondary effects      <br>&nbsp;
@@ -154,9 +154,9 @@ PS                                                           <BR>
 		"https://dordt.instructure.com/courses/2899971/assignments/29815330"
 		>10/29</a>
         <!-- Returned -->        </TD><TD align="center" valign="top">
-		11/02<!--<a href=
-        "https://dordt.instructure.com/files/137303597/download?download_frd=1"
-        >11/05</a><br>
+		<a href=
+        "https://dordt.instructure.com/files/189652875/download?download_frd=1"
+        >11/02</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: P-ch, CMOS, finite <i>r<sub>D</sub></i> in saturation <br>&nbsp;
 		MOSFET at DC (Bias analysis), 2nd-order effects.<br>&nbsp;
