--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -207,13 +207,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- --> Details of Common Source, Emitter, Gate, Base amplifiers<!--end comment--></td>  
    </TR><!-- Week of 11/08 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/10<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/189651900/download?download_frd=1"><!-- -->
+	  11/10<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/12<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://studio.youtube.com/video/bdbhDZkL3pc/edit">VIDEO</a></small>
+	  <!-- --> Follower amps, unilateral and non-u., Early effect, fixed bias<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><font color=grey>Test #2</font><!--end comment--></td>  
    </TR><!-- Week of 11/15 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
