Posted slides for 363 and 363PS#12 	modified:   F20/363/363F20DN.HTM 	modified:   F20/363/363F20PS.HTM

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/06/2020 7:49 am)
+                               >(Last update: 11/10/2020 9:24 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,29 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+12
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/10<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/2899998/assignments/29972933"
+		>11/17</a><br>        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
+		>11/xx</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+		         Superheterodyne tuning, image freq.   <br>&nbsp;
+        Read Ch 3 Sec. 3.2.3, 3.2.4          <br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+		         Ch 2 Sec. 2.6, slides<br>&nbsp;
+		                                               <br>&nbsp;
+        Do<DO> 2.62, 3.16, 3.17</DO>           
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
 11
