Updated errata for Proakis and Salehi 2nd, electronic ed., page 78, FT of sine 	modified:   errata/Proakis_Salehi/2nd/P_S_2_ER.HTM 	new file:   errata/Proakis_Salehi/2nd/Proakis_Salehi_2_errata_equations.docx 	new file:   errata/Proakis_Salehi/2nd/Proakis_Salehi_2e_p78_FT_of_sine.png

--- a/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
+++ b/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
@@ -14,7 +14,7 @@ A:hover {text-decoration:underline;}
 <A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm" 
                        >TEXTBOOK ERRATA</a><br>
-                       (last update 9/08/2020)<br>
+                       (last update 11/16/2020)<br>
                                <br>
       <img src="Proakis_cover_9780133354850.jpg" width="101" height="141" 
               alt="photo of textbook cover"><br><b>
@@ -48,7 +48,15 @@ Page 42, Equation 2.1.42</b><br>
    alt="Script T"> (script "T") in every instance. 
    (Three replacements)
 
-                                   <br><br><A NAME=ERR_101></A><b>
+                                    <br><br><A NAME=ERR_78></A><b>
+Page 78, Some electronic editions of the textbook only, <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+   Fourier transform of the sin function has a sign error</b><br>
+   The correct transform is <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+   <img src="Proakis_Salehi_2e_p78_FT_of_sine.png"><br><small><i> &nbsp; &nbsp; &nbsp; &nbsp; 
+        (Posted 11/16/2020)  </i></small>    
+   
+
+                                    <br><br><A NAME=ERR_101></A><b>
 Page 101, Problem 2.5 parts 3 and 4</b><br>
    Replace parentheses with square braces.  The corrected text is. . .<br>
    <b>3.</b> sin[4000&pi;<i>t</i>] + cos[11,000&pi;<i>t</i>]<br>
