Also posted 363PS#13.  Also updated errata on Proakis, Salehi Prob. 4.2

--- a/F20/363/363F20PS.HTM
+++ b/F20/363/363F20PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 11/10/2020 9:24 pm)
+                               >(Last update: 11/17/2020 9:44 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,32 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+13
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/17<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/2899998/assignments/xxxxxxxxx"
+		>11/24</a><br>        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!--<a href=
+		"https://dordt.instructure.com/files/xxxxxxxxxx/download?download_frd=1"
+		>11/xx</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Angle modulation basics, FM, PM       <br>&nbsp;
+        Read Ch 4 Sec. 4.1                             <br>&nbsp;
+		                                               <br>&nbsp;
+        Do<DO> 4.1, 4.2</DO>                           <br>&nbsp;
+		                                               <br>&nbsp;
+		Note textbook errata on <a href=
+		"https://dfdeboer.github.io/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_163"
+		                      >page 163, Figure 4.2</a></b><br>&nbsp;
+		Note textbook errata in <a href=
+		"https://dfdeboer.github.io/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM#ERR_182"
+		                       >Problem 4.2</a>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
 12
