--- a/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
+++ b/errata/Proakis_Salehi/2nd/P_S_2_ER.HTM
@@ -117,7 +117,7 @@ Page 163, Figure 4.2</b><br>
                                  <br><br><A NAME=ERR_182></A><b>
 Page 182, Problem 4.2.</b><br>
    Part two has a typo (<i>f<sub>d</sub></i> should be <i>k<sub>f</sub></i>) 
-   but and there is an amgiguity of units.  Replace part (2) with this
+   but also there is an amgiguity of units.  Replace part (2) with this
    question:<br><br>
    
    2.  If phase modulation is used with <i>k<sub>p</sub></i> = 1 rad/V what
