--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -217,14 +217,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- --> Hilbert trans. &amp; hearing loops, VSB, <b>Ch 4</b> Intro to FM and PM<!--end comment--></td>  
    </TR><!-- Week of 11/15 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  11/17<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/190352636/download?download_frd=1"><!-- -->
+	  11/17<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       11/19<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small>
-	  <!-- --> <!--end comment--><br>
+      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=86DBQrRGfrY">VIDEO</a></small>
+	  <!-- --> FM PM Basics, Narrow and Wideband, Spectra &amp; Bessel Functions<!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small>
 	  <!-- --> <!--end comment--></td>  
    </TR><!-- Week of 11/22 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
