Published slides and videos for 322, 363, also 322PS12 	modified:   F20/322/322F20DN.HTM 	modified:   F20/322/322F20PS.HTM 	modified:   F20/363/363F20DN.HTM

--- a/F20/322/322F20DN.HTM
+++ b/F20/322/322F20DN.HTM
@@ -220,13 +220,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/190348881/download?download_frd=1"><!-- -->
-	  11/17<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      11/19<!-- --</a><!-- --></td>
+	  11/17<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/190606778/download?download_frd=1"><!-- -->
+      11/19<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=B4H6KGKYSqo">VIDEO</a></small>
 	  <!-- --> PSpice demo, Strategies: classical &amp; feedback bias. Dynamic range <!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--></td>  
+      <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=hU4zfC4o4X8">VIDEO</a></small>
+	  <!-- --> Prob. 7.58, AC vs. DC load line, max-min out of follwrs, <b>Ch 8</b> intro.<!--end comment--></td>  
    </TR><!-- Week of 11/22 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
@@ -255,8 +256,9 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       12/10<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small><!-- --> <!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><font color=grey>Last Day of Class</font><!--end comment--></td>  
+      <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small>
+	  <!-- --><font color=grey>No class&mdash;exam week</font><!--end comment--><br>
+      <!--Thursday   -->&nbsp;<!--start comment--><font color=grey>Final exam, 10:30 AM &ndash; Noon</font><!--end comment--></td>  
    </TR><!------------------------------------------------------------------------------------- -->
      </TABLE></p>
 </BODY>
