--- a/F20/363/363F20DN.HTM
+++ b/F20/363/363F20DN.HTM
@@ -219,14 +219,14 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/190352636/download?download_frd=1"><!-- -->
-	  11/17<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      11/19<!-- --</a><!-- --></td>
+	  11/17<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/190567755/download?download_frd=1"><!-- -->
+      11/19<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=86DBQrRGfrY">VIDEO</a></small>
 	  <!-- --> FM PM Basics, Narrow and Wideband, Spectra &amp; Bessel Functions<!--end comment--><br>
-      <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small>
-	  <!-- --> <!--end comment--></td>  
+      <!--Thursday   -->&nbsp;<!--start comment--><!-- --><small><a href="https://www.youtube.com/watch?v=geTDFvgQ3po">VIDEO</a></small>
+	  <!-- --> Props. of Bessel, FM spect, FM hist, Carson's rule, FM mod/demod<!--end comment--></td>  
    </TR><!-- Week of 11/22 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R<br></td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
@@ -259,9 +259,9 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       12/10<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Tuesday    -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small>
-	  <!-- --> <!--end comment--><br>
+	  <!-- --> <font color=grey>Final Exam, 12:30 PM &dash; 2:00 PM</font><!--end comment--><br>
       <!--Thursday   -->&nbsp;<!--start comment--><!-- --<small><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx">VIDEO</a></small>
-	  <!-- --> <font color=grey>Last Day of Class</font><!--end comment--></td>  
+	  <!-- --> <font color=grey>No class&mdash;exam week</font><!--end comment--></td>  
    </TR><!------------------------------------------------------------------------------------- -->
      </TABLE></p>
 </BODY>
