--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/10/2020 8:05 pm)
+                              >(Last update: 11/19/2020 9:33 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,27 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+12
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        11/19
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href=
+		"https://dordt.instructure.com/courses/2899971/assignments/30071786"
+		>12/03</a>
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/courses/2899971/assignments/29945733"
+        >11/28</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topic: Biasing, discrete-circuit amplifiers    <br>&nbsp;
+		Read: 7.3, 7.4                                 <br>&nbsp;
+		                                               <br>&nbsp;
+		Do<DO>                                         <br>&nbsp;
+		+7.59, +7.68, 7.78, D7.83, +D7.92, 7.105, 7.134.</DO>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
 11
