--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/19/2020 9:33 pm)
+                              >(Last update: 11/19/2020 9:39 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -103,6 +103,8 @@ PS                                                           <BR>
 		                                               <br>&nbsp;
 		Do<DO>                                         <br>&nbsp;
 		+7.59, +7.68, 7.78, D7.83, +D7.92, 7.105, 7.134.</DO>
+		                                        <br>&nbsp;<small>
+		(This is the last problem set of the semester.)</small>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
 11
