Fixed turn in link, 363PS13, added links to course evals, 322

--- a/F20/322/322F20PS.HTM
+++ b/F20/322/322F20PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 11/19/2020 9:39 pm)
+                              >(Last update: 11/23/2020 1:45 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -104,7 +104,16 @@ PS                                                           <BR>
 		Do<DO>                                         <br>&nbsp;
 		+7.59, +7.68, 7.78, D7.83, +D7.92, 7.105, 7.134.</DO>
 		                                        <br>&nbsp;<small>
-		(This is the last problem set of the semester.)</small>
+		(This is the last problem set of the semester.)</small><br>&nbsp;
+		- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+		Course evaluation:                             <br>&nbsp;
+		For accreditation purposes and for future      <br>&nbsp;
+		possible improvement of the course, please fill<br>&nbsp;
+		the two course evaluations linked here.        <br>&nbsp;
+		"<a href=""
+		>Engineering Department's questionaire</a>"       <br>&nbsp;
+		<a href=""
+		>Nationally normed University questionaire</a>"
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
 11
